yeni resimler eklendi.

--- a/index.html
+++ b/index.html
@@ -1267,39 +1267,39 @@
                             </div>
                         </div>
 
-                        <!-- Yunus Akgün -->
+                        <!-- Kaan Ayhan -->
                         <div class="player-card galatasaray">
                             <div class="card-glow"></div>
                             <div class="card-shine"></div>
 
                             <div class="rating-badge">
-                                <div class="rating-number">82</div>
-                                <div class="rating-type">RW</div>
+                                <div class="rating-number">80</div>
+                                <div class="rating-type">RB</div>
                             </div>
 
-                            <div class="position-badge">FORVET</div>
+                            <div class="position-badge">DEFANS</div>
 
                             <div class="player-image-container">
                                 <div class="player-image">
-                                    <img src="assets/players/yunus.png" alt="Yunus Akgün">
+                                    <img src="assets/players/kaan.png" alt="Kaan Ayhan">
                                 </div>
                             </div>
 
                             <div class="player-info">
-                                <div class="player-name">YUNUS AKGÜN</div>
+                                <div class="player-name">KAAN AYHAN</div>
 
                                 <div class="player-stats">
                                     <div class="stat">
-                                        <div class="stat-value">85</div>
+                                        <div class="stat-value">82</div>
+                                        <div class="stat-label">DEF</div>
+                                    </div>
+                                    <div class="stat">
+                                        <div class="stat-value">81</div>
+                                        <div class="stat-label">FİZ</div>
+                                    </div>
+                                    <div class="stat">
+                                        <div class="stat-value">79</div>
                                         <div class="stat-label">HIZ</div>
-                                    </div>
-                                    <div class="stat">
-                                        <div class="stat-value">83</div>
-                                        <div class="stat-label">DRİB</div>
-                                    </div>
-                                    <div class="stat">
-                                        <div class="stat-value">80</div>
-                                        <div class="stat-label">PAS</div>
                                     </div>
                                 </div>
 
@@ -1307,9 +1307,9 @@
                                     <div>
                                         <img src="https://tmssl.akamaized.net/images/flagge/verysmall/174.png"
                                             alt="Turkey" class="country-flag">
-                                        TUR • 23 yaş
+                                        TUR • 29 yaş
                                     </div>
-                                    <div># 19</div>
+                                    <div># 5</div>
                                 </div>
                             </div>
                         </div>
@@ -1953,39 +1953,39 @@
                             </div>
                         </div>
 
-                        <!-- Yunus Akgün -->
+                        <!-- Kaan Ayhan -->
                         <div class="player-card galatasaray">
                             <div class="card-glow"></div>
                             <div class="card-shine"></div>
 
                             <div class="rating-badge">
-                                <div class="rating-number">82</div>
-                                <div class="rating-type">RW</div>
+                                <div class="rating-number">80</div>
+                                <div class="rating-type">RB</div>
                             </div>
 
-                            <div class="position-badge">FORVET</div>
+                            <div class="position-badge">DEFANS</div>
 
                             <div class="player-image-container">
                                 <div class="player-image">
-                                    <img src="assets/players/yunus.png" alt="Yunus Akgün">
+                                    <img src="assets/players/kaan.png" alt="Kaan Ayhan">
                                 </div>
                             </div>
 
                             <div class="player-info">
-                                <div class="player-name">YUNUS AKGÜN</div>
+                                <div class="player-name">KAAN AYHAN</div>
 
                                 <div class="player-stats">
                                     <div class="stat">
-                                        <div class="stat-value">85</div>
+                                        <div class="stat-value">82</div>
+                                        <div class="stat-label">DEF</div>
+                                    </div>
+                                    <div class="stat">
+                                        <div class="stat-value">81</div>
+                                        <div class="stat-label">FİZ</div>
+                                    </div>
+                                    <div class="stat">
+                                        <div class="stat-value">79</div>
                                         <div class="stat-label">HIZ</div>
-                                    </div>
-                                    <div class="stat">
-                                        <div class="stat-value">83</div>
-                                        <div class="stat-label">DRİB</div>
-                                    </div>
-                                    <div class="stat">
-                                        <div class="stat-value">80</div>
-                                        <div class="stat-label">PAS</div>
                                     </div>
                                 </div>
 
@@ -1993,9 +1993,9 @@
                                     <div>
                                         <img src="https://tmssl.akamaized.net/images/flagge/verysmall/174.png"
                                             alt="Turkey" class="country-flag">
-                                        TUR • 23 yaş
+                                        TUR • 29 yaş
                                     </div>
-                                    <div># 19</div>
+                                    <div># 5</div>
                                 </div>
                             </div>
                         </div>
@@ -2808,7 +2808,7 @@
 
                     <div class="player-image-container">
                         <div class="player-image">
-                            <img src="assets/players/mertgunok.png" alt="Mert Günok">
+                            <img src="assets/players/mert.png" alt="Mert Günok">
                         </div>
                     </div>
 
