--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button class="menu-toggle">☰</button>
     <div class="container">
         <div class="sidebar">
             <div class="league-header">
@@ -152,18 +153,16 @@
         <div class="main-content">
             <div class="header">
                 <div class="logo-container">
-
+                    <!-- Team information will be loaded here -->
                 </div>
                 <div class="header-text">
-
+                    <!-- Team information will be loaded here -->
                 </div>
             </div>
 
-            <div id="galatasaray-content">
-                <div class="page-container active" id="galatasaray-page-1">
-                    <div class="cards-grid">
-                        <!-- Cards will be loaded here -->
-                    </div>
+            <div class="page-container active">
+                <div class="cards-grid">
+                    <!-- Cards will be loaded here -->
                 </div>
             </div>
         </div>
