--- a/lineup.html
+++ b/lineup.html
@@ -17,7 +17,7 @@
         <div class="left-panel">
             <div class="team-selector">
                 <select id="teamSelect">
-                    <option value="">Takım Seçin</option>
+                    <option value="all">Tüm Takımlar</option>
                     <option value="galatasaray">Galatasaray</option>
                     <option value="fenerbahce">Fenerbahçe</option>
                     <option value="besiktas">Beşiktaş</option>
@@ -29,6 +29,7 @@
                     <option value="DEF">Defans</option>
                     <option value="MID">Orta Saha</option>
                     <option value="FW">Forvet</option>
+                    <option value="MAN">Teknik Direktör</option>
                 </select>
             </div>
             <div class="formation-controls">
@@ -66,6 +67,9 @@
                 <div class="corner corner-top-right"></div>
                 <div class="corner corner-bottom-left"></div>
                 <div class="corner corner-bottom-right"></div>
+                <div id="managerArea" class="manager-area">
+                    <div class="manager-placeholder">Teknik Direktör</div>
+                </div>
             </div>
         </div>
     </div>
