--- a/index.html
+++ b/index.html
@@ -21,132 +21,7 @@
                 <h1>TRENDYOL SÜPER LİG</h1>
             </div>
             <ul class="teams-list">
-                <li class="team-item">
-                    <button class="team-button" data-team="galatasaray">
-                        <img src="https://images.seeklogo.com/logo-png/61/2/galatasaray-5-yildizli-concept-logo-png_seeklogo-617686.png"
-                            alt="Galatasaray" class="team-logo" width="16" height="16">
-                        Galatasaray SK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="fenerbahce">
-                        <img src="https://www.freepnglogos.com/uploads/fenerbahce-logo-png/fenerbahce-super-lig-takimi-logo-9.png"
-                            alt="Fenerbahçe" class="team-logo" width="16" height="16">
-                        Fenerbahçe SK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="besiktas">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/BesiktasJK-Logo.svg/250px-BesiktasJK-Logo.svg.png"
-                            alt="Beşiktaş" class="team-logo" width="16" height="16">
-                        Beşiktaş JK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="trabzonspor">
-                        <img src="https://sortitoutsi.b-cdn.net/uploads/team/1879.png" alt="Trabzonspor"
-                            class="team-logo" width="16" height="16">
-                        Trabzonspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="samsunspor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/152.png" alt="Samsunspor"
-                            class="team-logo" width="16" height="16">
-                        Samsunspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="basaksehir">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/6890.png" alt="İstanbul Başakşehir"
-                            class="team-logo" width="16" height="16">
-                        İ. Başakşehir FK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="eyupspor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/7160.png" alt="Eyüpspor"
-                            class="team-logo" width="16" height="16">
-                        Eyüpspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="goztepe">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/1467.png" alt="Göztepe"
-                            class="team-logo" width="16" height="16">
-                        Göztepe
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="rizespor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/126.png" alt="Çaykur Rizespor"
-                            class="team-logo" width="16" height="16">
-                        Ç. Rizespor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="kasimpasa">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/10484.png" alt="Kasımpaşa"
-                            class="team-logo" width="16" height="16">
-                        Kasımpaşa
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="konyaspor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/2293.png" alt="Konyaspor"
-                            class="team-logo" width="16" height="16">
-                        Konyaspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="alanyaspor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/11282.png" alt="Alanyaspor"
-                            class="team-logo" width="16" height="16">
-                        Alanyaspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="kayserispor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/3205.png" alt="Kayserispor"
-                            class="team-logo" width="16" height="16">
-                        Kayserispor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="gaziantep">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/2832.png" alt="Gaziantep FK"
-                            class="team-logo" width="16" height="16">
-                        Gaziantep FK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="antalyaspor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/589.png" alt="Antalyaspor"
-                            class="team-logo" width="16" height="16">
-                        Antalyaspor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="kocaelispor">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/120.png" alt="Kocaelispor"
-                            class="team-logo" width="16" height="16">
-                        Kocaelispor
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="genclerbirligi">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/820.png" alt="Gençlerbirliği"
-                            class="team-logo" width="16" height="16">
-                        Gençlerbirliği SK
-                    </button>
-                </li>
-                <li class="team-item">
-                    <button class="team-button" data-team="karagumruk">
-                        <img src="https://tmssl.akamaized.net/images/wappen/head/6646.png" alt="Fatih Karagümrük"
-                            class="team-logo" width="16" height="16">
-                        F. Karagümrük
-                    </button>
-                </li>
+                <!-- Teams will be dynamically loaded here -->
             </ul>
         </div>
 
@@ -169,6 +44,7 @@
     </div>
 
     <script src="assets/js/index.js" defer></script>
+    <script src="assets/js/leagueTeamGenerator.js" defer></script>
     <script src="assets/js/cardGenerator.js" defer></script>
 </body>
 
