tüm takımlar eklendi bilgielr güncellenecek.

--- a/lineup.html
+++ b/lineup.html
@@ -22,6 +22,19 @@
                     <option value="fenerbahce">Fenerbahçe</option>
                     <option value="besiktas">Beşiktaş</option>
                     <option value="trabzonspor">Trabzonspor</option>
+                    <option value="basaksehir">Başakşehir</option>
+                    <option value="antalyaspor">Antalyaspor</option>
+                    <option value="konyaspor">Konyaspor</option>
+                    <option value="alanyaspor">Alanyaspor</option>
+                    <option value="kayserispor">Kayserispor</option>
+                    <option value="gaziantep">Gaziantep FK</option>
+                    <option value="kocaelispor">Kocaelispor</option>
+                    <option value="genclerbirligi">Gençlerbirliği</option>
+                    <option value="karagumruk">Karagümrük</option>
+                    <option value="rizespor">Rizespor</option>
+                    <option value="goztepe">Göztepe</option>
+                    <option value="samsunspor">Samsunspor</option>
+                    <option value="eyupspor">Eyüpspor</option>
                 </select>
                 <select id="positionFilter">
                     <option value="">Tüm Pozisyonlar</option>
