--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23E60012' stroke='%23FFFFFF' stroke-width='3'/><polygon points='50,20 60,35 75,35 65,50 70,65 50,55 30,65 35,50 25,35 40,35' fill='%23FFFFFF'/></svg>"
         type="image/svg+xml">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
