--- a/lineup.html
+++ b/lineup.html
@@ -86,6 +86,51 @@
             </div>
         </div>
     </div>
+    <div class="bench-section">
+        <div class="bench-title">BENCH</div>
+        <div class="bench-positions">
+            <div class="bench-slot" data-position="GK">
+                <div class="position-label">GK</div>
+                <div class="bench-placeholder">Kaleci</div>
+            </div>
+            <div class="bench-slot" data-position="RB">
+                <div class="position-label">RB</div>
+                <div class="bench-placeholder">Sağ Bek</div>
+            </div>
+            <div class="bench-slot" data-position="CB">
+                <div class="position-label">CB</div>
+                <div class="bench-placeholder">Stoper</div>
+            </div>
+            <div class="bench-slot" data-position="LB">
+                <div class="position-label">LB</div>
+                <div class="bench-placeholder">Sol Bek</div>
+            </div>
+            <div class="bench-slot" data-position="CM">
+                <div class="position-label">CM</div>
+                <div class="bench-placeholder">Orta Saha</div>
+            </div>
+            <div class="bench-slot" data-position="CDM">
+                <div class="position-label">CDM</div>
+                <div class="bench-placeholder">Ön Libero</div>
+            </div>
+            <div class="bench-slot" data-position="CAM">
+                <div class="position-label">CAM</div>
+                <div class="bench-placeholder">On Numara</div>
+            </div>
+            <div class="bench-slot" data-position="RW">
+                <div class="position-label">RW</div>
+                <div class="bench-placeholder">Sağ Kanat</div>
+            </div>
+            <div class="bench-slot" data-position="LW">
+                <div class="position-label">LW</div>
+                <div class="bench-placeholder">Sol Kanat</div>
+            </div>
+            <div class="bench-slot" data-position="ST">
+                <div class="position-label">ST</div>
+                <div class="bench-placeholder">Santrafor</div>
+            </div>
+        </div>
+    </div>
 
     <script src="assets/js/lineup.js" defer></script>
     <script src="assets/js/cardGenerator.js" defer></script>
