--- a/lineup.html
+++ b/lineup.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <a href="index.html" class="home-button">Anasayfa</a>
+    <a href="index.html" class="home-button">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="home-icon">
+            <path d="M12 2.1L1 12h3v9h6v-6h4v6h6v-9h3L12 2.1z"/>
+        </svg>
+        <span>Anasayfa</span>
+    </a>
     <div class="container">
         <div class="left-panel">
             <div class="team-selector">
