--- a/lineup.html
+++ b/lineup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Süper Lig Kadro Oluşturucu</title>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23E60012' stroke='%23FFFFFF' stroke-width='3'/><polygon points='50,20 60,35 75,35 65,50 70,65 50,55 30,65 35,50 25,35 40,35' fill='%23FFFFFF'/></svg>"
