--- a/lineup.html
+++ b/lineup.html
@@ -9,6 +9,88 @@
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23E60012' stroke='%23FFFFFF' stroke-width='3'/><polygon points='50,20 60,35 75,35 65,50 70,65 50,55 30,65 35,50 25,35 40,35' fill='%23FFFFFF'/></svg>"
         type="image/svg+xml">
     <link rel="stylesheet" href="assets/css/lineup.css">
+    <style>
+        .add-button {
+            display: none; /* Varsayılan olarak gizli */
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            width: 24px;
+            height: 24px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            font-size: 18px;
+            line-height: 24px;
+            cursor: pointer;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+
+        .delete-button {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            width: 24px;
+            height: 24px;
+            background-color: #ff4444;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            font-size: 18px;
+            line-height: 24px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+
+        .add-button:active, .delete-button:active {
+            transform: scale(0.95);
+        }
+
+        .add-button:active {
+            background-color: #45a049;
+        }
+
+        .delete-button:active {
+            background-color: #ff3333;
+        }
+
+        .player-card {
+            position: relative;
+        }
+
+        /* Mobil cihazlarda + butonunu göster */
+        @media (max-width: 768px) {
+            .add-button {
+                display: flex;
+            }
+
+            /* Mobilde X butonu + butonunun solunda olsun */
+            .delete-button {
+                right: 34px; /* + butonunun genişliği + biraz boşluk */
+            }
+        }
+
+        /* Dokunmatik cihazlarda hover efektini kaldır */
+        @media (hover: none) {
+            .add-button:hover, .delete-button:hover {
+                transform: none;
+            }
+            .add-button:hover {
+                background-color: #4CAF50;
+            }
+            .delete-button:hover {
+                background-color: #ff4444;
+            }
+        }
+    </style>
 </head>
 
 <body>
