mobil tasarım dzüeltildi.

--- a/lineup.html
+++ b/lineup.html
@@ -58,6 +58,12 @@
                     <div class="manager-placeholder">Teknik Direktör</div>
                 </div>
             </div>
+            <div class="mobile-manager-section">
+                <div class="section-title">Teknik Direktör</div>
+                <div class="manager-area">
+                    <div class="manager-placeholder">Teknik Direktör</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="bench-section">
